testsuite/tests/parser/should_fail/NoNumericUnderscores.stderr

NoNumericUnderscores.hs:10:3: error:
    Use NumericUnderscores to allow underscores in integer literals
